[gd_scene load_steps=8 format=2]

[ext_resource path="res://Lkw.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Cars/Car1.gd" type="Script" id=2]
[ext_resource path="res://Cars/Car.gd" type="Script" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="BoxShape" id=2]

[sub_resource type="CubeMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 1, 0, 0, 1 )

[node name="AI" type="KinematicBody"]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.02841, 0.0201435, 0.00940228 )
script = ExtResource( 3 )

[node name="Car1" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null
script = ExtResource( 2 )

[node name="Car2" type="MeshInstance" parent="."]
mesh = ExtResource( 1 )
material/0 = null
material/1 = null
material/2 = null
material/3 = null
material/4 = null
material/5 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 2.8, 0, 0, 0 )
shape = SubResource( 1 )

[node name="Area" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.20775 )

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 6, 0, 0, 0, 1, 0, 0, 0, 6, 0, 0, -5.31925 )
shape = SubResource( 2 )

[node name="Bremslicht" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, 0.7, 0.3, 3.48407 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="Bremslicht2" type="MeshInstance" parent="."]
transform = Transform( 0.1, 0, 0, 0, 0.1, 0, 0, 0, 0.1, -0.640717, 0.3, 3.48407 )
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
[connection signal="body_exited" from="Area" to="." method="_on_Area_body_exited"]
